Add inputFiedsBranch file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<h1>hello world</h1>
+<input type="text">Hello I am samoul Vann!</input>
+<input type="checkbox">Hello I am Ronan Vann!</input>
+<textarea name="textarea" id="textarea" cols="30" rows="10"></textarea>
+<input type="text">Cambobox</input>
